wip: started work on schemas
