# app/server/internal/server/oas_response_encoders_gen.go
@@ -15,7 +15,7 @@ import (
 
 func encodeCreateStbUserResponse(response CreateStbUserRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
-	case *StbUser:
+	case *StbUserResponse:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(201)
 		span.SetStatus(codes.Ok, http.StatusText(201))
